# neroControl

./: CMakeLists.txt  README.md  README.txt  package.xml  requirements.txt
config/: bebop_ekf.yaml
data/: bebop_log_20251110_200941.csv  bebop_log_20251110_201619.csv  bebop_log_20251110_205536.csv  bebop_log_20251110_213543.csv  bebop_log_20251110_214535.csv  bebop_log_20251110_214959.csv  bebop_log_20260124_055534.csv  bebop_log_20260124_060005.csv  bebop_log_20260124_103741.csv  bebop_log_20260124_104350.csv  bebop_log_20260124_104705.csv  bebop_log_20260128_153716.csv  bebop_log_20260128_154049.csv  bebop_log_20260128_154453.csv  bebop_log_20260202_205855.csv  bebop_log_20260203_013607.csv  bebop_log_20260203_013835.csv  bebop_log_20260203_014149.csv  bebop_log_20260207_181522.csv  bebop_log_20260207_181611.csv  bebop_log_20260207_185101.csv  bebop_log_20260207_185724.csv  bebop_log_20260207_190130.csv  bebop_log_20260207_191339.csv  bebop_log_20260207_191623.csv  bebop_log_20260207_192018.csv  bebop_log_20260207_192321.csv  bebop_log_20260207_192601.csv  bebop_log_20260207_192829.csv  bebop_log_20260207_193127.csv  bebop_log_20260207_193644.csv  bebop_log_20260207_193906.csv  bebop_log_20260207_205113.csv  bebop_log_20260207_205543.csv  bebop_log_20260207_205751.csv  bebop_log_20260207_210010.csv  bebop_log_20260207_210219.csv  bebop_log_20260207_210444.csv  bebop_log_20260207_210717.csv  bebop_log_20260207_211538.csv  (+8 more)
launch/: cam_control.launch.py  full_bebop.launch.py  gazebo_cam.launch.py  joy_full_bebop.launch.py  only_control.launch.py  rviz_control.launch.py  sim_bebop.launch.py
neroControl/: __init__.py  controlador.py  controlador_tray copy.py  controlador_tray.py  graphical.py  initial_frame.py  mpc_controlador.py  sim.py  sim120.py  vel_controlador.py
nero_drone/: altitude.py  bebop_control_gui.py  controlador.py  controlador_tray copy.py  controlador_tray.py  grahps.py  graphical.py  info.txt  kinematic.py  mpc_controlador copy.py  ontime_graphical.py  pos_controlador.py  pre_controlador.py  pyibsv.py  pypbsv.py  ref_pos.py  ref_trayectory.py  sim.py  sim_odom.py  tf_to_gazebo.py  vel_controlador.py
others/: bebop2.rviz  bebop2_sim.rviz  four_op.py  opt.py  optimizador.py  sec_op.py  th_op.py
scripts/: move.py
src/: bebop_odom_fusion.cpp  bebop_odometry.cpp  beboptag.cpp  filtred.cpp  ibvs copy.cpp  ibvs.cpp  pbvs.cpp  safe_watchdog.cpp  tag_pos.cpp  tf_cam.cpp  tf_odom_map.cpp  tf_tag_bebop.cpp  velocity_logger.cpp  visual.cpp
urdf/: bebop2.urdf  sphere.sdf  sphere.urdf
worlds/: empty_nograviity.sdf
